Record logs and events

--- a/hyperscanning/.env
+++ b/hyperscanning/.env
@@ -15,3 +15,7 @@ DECIMATE=16
 # Do not hammer the CPU
 # https://doc.timeflux.io/en/latest/usage/getting_started.html#environment
 TIMEFLUX_SLEEP=0.1
+
+# Output
+TIMEFLUX_LOG_FILE=./logs/%Y%m%d-%H%M%S.log
+TIMEFLUX_DATA_PATH=./data
