--- a/implicit/frustration/unicorn.yaml
+++ b/implicit/frustration/unicorn.yaml
@@ -19,7 +19,9 @@ graphs:
           topic: eeg
       - id: reindex
         module: timeflux.nodes.dejitter
-        class:  Reindex
+        class: Reindex
+        params:
+          rate: 250
     edges:
       - source: eeg
         target: reindex
@@ -89,7 +91,6 @@ graphs:
         class: Save
         params:
           path: data
-          #filename: 'test_001.hdf5'
           complevel: 0
           min_itemsize: 200
       - id: debug
