--- a/emg_gesture/main.yaml
+++ b/emg_gesture/main.yaml
@@ -1,9 +1,9 @@
 
 import:
-#  - bitalino.yaml # comment this line to run on replayed data
-  - graphs/replay.yaml # comment this line to run with bitalino device
+  - graphs/bitalino.yaml # comment this line to run on replayed data
+  #- graphs/replay.yaml # comment this line to run with bitalino device
   - graphs/biomarkers.yaml
-  - graphs/save.yaml
+  #- graphs/save.yaml
 
 graphs:
 
