--- a/emg_gesture/graphs/save.yaml
+++ b/emg_gesture/graphs/save.yaml
@@ -5,27 +5,26 @@ graphs:
         module: timeflux.nodes.zmq
         class: Sub
         params:
-          topics: [bitalino, emg, events]
-          #topics: [bitalino, emg_filtered] #, emg_burst, emg_features, events]
+          topics: [bitalino, filtered, burst, features, events]
       - id: save
         module: timeflux.nodes.hdf5
         class: Save
         params:
           min_itemsize: 1000
-      - id: display
-        module: timeflux.nodes.debug
-        class: Display
+      # - id: display
+      #   module: timeflux.nodes.debug
+      #   class: Display
     edges:
-      # - source: sub:emg_filtered
-      #   target: display
       - source: sub:bitalino
         target: save:emg_raw # will be saved in hdf (key '/emg/raw')
-      - source: sub:emg_filtered
+      - source: sub:filtered
         target: save:emg_filtered # will be stored in hdf (key '/emg/filtered')
-      - source: sub:emg_burst
+      - source: sub:burst
         target: save:emg_burst  # will be stored in hdf (key '/emg/burst')
-      - source: sub:emg_features
+      - source: sub:features
         target: save:emg_features  # will be stored in hdf (key '/emg/features')
       - source: sub:events
         target: save:events # will be stored in hdf (key '/events')
+      # - source: sub:filtered
+      #   target: display
     rate: 1 # update file once per second
