--- a/roshambo/graphs/bitalino.yaml
+++ b/roshambo/graphs/bitalino.yaml
@@ -9,7 +9,7 @@ graphs:
       module: timeflux_bitalino.nodes.driver
       class: Bitalino
       params:
-        port: /dev/tty.BITalino-02-44
+        port: /dev/tty.BITalino-19-95-Bluetoot
         rate: 1000
         sensors:
           A1: EMG
@@ -24,21 +24,20 @@ graphs:
         key: [A1_EMG, A2_EMG]
     # Publish 
     # -------
-    - id: publish
+    - id: pub_raw
       module: timeflux.nodes.zmq
       class: Pub
       params:
-        topic: emg
-  
-    # - id: display
-    #   module: timeflux.nodes.debug
-    #   class: Display
+        topic: raw
+
+    - id: display
+      module: timeflux.nodes.debug
+      class: Display
     edges:
      - source: bitalino
        target: select
      - source: select
-       target: publish
-       
-    # - source: bitalino
-    #   target: display
+       target: pub_raw
+    #  - source: select
+    #    target: display
     rate: 0
