--- a/roshambo/graphs/save.yaml
+++ b/roshambo/graphs/save.yaml
@@ -5,7 +5,7 @@ graphs:
         module: timeflux.nodes.zmq
         class: Sub
         params:
-          topics: [emg, filtered, burst, features, events]
+          topics: [emg, features, events]
       - id: save
         module: timeflux.nodes.hdf5
         class: Save
@@ -18,9 +18,9 @@ graphs:
     edges:
       - source: sub:emg
         target: save:emg_raw # will be saved in hdf (key '/emg/raw')
-      - source: sub:filtered
+      - source: sub:emg_filtered
         target: save:emg_filtered # will be stored in hdf (key '/emg/filtered')
-      - source: sub:burst
+      - source: sub:emg_burst
         target: save:emg_burst  # will be stored in hdf (key '/emg/burst')
       - source: sub:features
         target: save:emg_features  # will be stored in hdf (key '/emg/features')
