--- a/roshambo/main.yaml
+++ b/roshambo/main.yaml
@@ -1,10 +1,11 @@
 
 import:
-  # - graphs/bitalino.yaml # comment this line to run on replayed data
-  - graphs/random.yaml # uncomment this line to run with random data
+  - graphs/bitalino.yaml # comment this line to run on replayed data
+  # - graphs/random.yaml # uncomment this line to run with random data
   # - graphs/replay.yaml # comment this line to run with bitalino device
   - graphs/biomarkers.yaml
-  - graphs/save.yaml
+  - graphs/ui.yaml
+  # - graphs/save.yaml
 
 graphs:
 
