--- a/coherence/graphs/save.yaml
+++ b/coherence/graphs/save.yaml
@@ -5,22 +5,24 @@ graphs:
         module: timeflux.nodes.zmq
         class: Sub
         params:
-          topics: [bitalino, cardiac, events]
+          topics: [raw, filtered, features, rr ]
       - id: save
         module: timeflux.nodes.hdf5
         class: Save
         params:
+          path: data
           min_itemsize: 1000
     edges:
-      - source: sub:bitalino
-        target: save:bitalino # will be saved in hdf( key '/bitalino'
+      - source: sub:raw
+        target: save:raw # will be saved in hdf( key '/raw'
 
-      - source: sub:cardiac_features
-        target: save:cardiac_features  # will be saved in hdf( key '/ecg_cardiac/features'
+      - source: sub:filtered
+        target: save:filtered # will be saved in hdf( key '/filtered'
 
-      - source: sub:cardiac_rr
-        target: save:cardiac_rr  # will be saved in hdf( key '/ecg_cardiac/rr'
+      - source: sub:rr
+        target: save:rr # will be saved in hdf( key '/rr'
 
-      - source: sub:events
-        target: save:events # will be saved in hdf( key '/events'
+      - source: sub:features
+        target: save:features # will be saved in hdf( key '/features'
+        
     rate: 1 # save stuff once per second
