--- a/roshambo/graphs/save.yaml
+++ b/roshambo/graphs/save.yaml
@@ -5,7 +5,7 @@ graphs:
         module: timeflux.nodes.zmq
         class: Sub
         params:
-          topics: [emg, features, events]
+          topics: [raw, filtered, burst, features, events]
       - id: save
         module: timeflux.nodes.hdf5
         class: Save
@@ -16,14 +16,14 @@ graphs:
       #   module: timeflux.nodes.debug
       #   class: Display
     edges:
-      - source: sub:emg
-        target: save:emg_raw # will be saved in hdf (key '/emg/raw')
-      - source: sub:emg_filtered
-        target: save:emg_filtered # will be stored in hdf (key '/emg/filtered')
-      - source: sub:emg_burst
-        target: save:emg_burst  # will be stored in hdf (key '/emg/burst')
+      - source: sub:raw
+        target: save:raw # will be saved in hdf (key '/raw')
+      - source: sub:filtered
+        target: save:filtered # will be stored in hdf (key '/filtered')
+      - source: sub:burst
+        target: save:burst  # will be stored in hdf (key '/burst')
       - source: sub:features
-        target: save:emg_features  # will be stored in hdf (key '/emg/features')
+        target: save:features  # will be stored in hdf (key '/features')
       - source: sub:events
         target: save:events # will be stored in hdf (key '/events')
       # - source: sub:filtered
