--- a/roshambo/main.yaml
+++ b/roshambo/main.yaml
@@ -1,11 +1,16 @@
 
 import:
-  - graphs/bitalino.yaml # comment this line to run on replayed data
+# Input graphs 
+# -------------
+  # - graphs/bitalino.yaml # comment this line to run on replayed data
   # - graphs/random.yaml # uncomment this line to run with random data
-  # - graphs/replay.yaml # comment this line to run with bitalino device
+  - graphs/replay.yaml # comment this line to run with bitalino device
+
+# Biomarkers and UI
+# -----------------
   - graphs/biomarkers.yaml
   - graphs/ui.yaml
-  # - graphs/save.yaml
+  # - graphs/save.yaml # un comment this graph to save the data in HDF5
 
 graphs:
 
