--- a/neurofeedback/bands/main.yaml
+++ b/neurofeedback/bands/main.yaml
@@ -1,7 +1,13 @@
 import:
-  #- graphs/synthetic.yaml
-  - graphs/replay.yaml
-  #- graphs/cyton.yaml
+# Input graphs 
+# -------------
+  # - graphs/bitalino.yaml # uncomment this line to use bitalino device
+  # - graphs/synthetic.yaml # uncomment this line to use brainflow device
+  # - graphs/cython.yaml # uncomment this line to use openBCI device
+  - graphs/replay.yaml #  uncomment this line to use replayed data 
+  # - graphs/sinus.yaml #  uncomment this line to use generated data 
+  
+  # - graphs/save.yaml # uncomment this graph to save the data in HDF5
 
 graphs:
 
@@ -32,11 +38,13 @@ graphs:
         filter_type: bandpass
         frequencies: [0.1, 40]
         order: 2
+        
     - id: select
       module: timeflux.nodes.query
       class: LocQuery
       params:
         key: [ Fpz ]
+
     - id: filter_bank
       module: timeflux_dsp.nodes.filters
       class: FilterBank
@@ -73,8 +81,6 @@ graphs:
       - source: notch
         target: bandpass
       - source: bandpass
-        target: select
-      - source: select
         target: filter_bank
       - source: filter_bank
         target: band_powers
