Fix random channel

--- a/roshambo/graphs/random.yaml
+++ b/roshambo/graphs/random.yaml
@@ -17,7 +17,7 @@ graphs:
         module: timeflux.nodes.zmq
         class: Pub
         params:
-          topic: emg
+          topic: raw
 
       # For debug purpose
       # ------------------
